[tool.poetry]
name = "antisniper"
version = "0.1.0"
description = "A python wrapper for the Antisniper API (api.antisniper.net)"
authors = ["KyngK <mckingkb@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
